@@ -2,5 +2,5 @@
  * For standalone build;
  * you should NEVER use this for official TeX Live!
  */
-#define VERSION "20190206"
+#define VERSION "20200501"
 #define TL_VERSION "standalone"
