@@ -1,3 +1,10 @@
+2020-05-01  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* Makefile.{am,in}, common.h, dvispc.c, chkdvifont.c:
+	Add a bug report addresse on command line help.
+	* chkdvifont.c: Avoid compiler warnings.
+	* configure.ac: Version 20200501.
+
 2020-01-17  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
 	* configure.ac: Version 20200117.
